# smart-inverter-fw

./: .gitignore  CMakeLists.txt  README.md  partitions_example.csv  sdkconfig
main/: CMakeLists.txt  Kconfig.projbuild  dcdc.cpp  dcdc.h  idf_component.yml  main.c  pwm.h  web.c  wifi.c
old/: dcdc2.cpp
